исправлена ошибка при дублировании ab_id договоров